src/main/metadata-excluded/objects/Test_Case__c.object
<CustomObject>
    <description>PMO: Test Management. Store all test scripts that need to be run.</description>
    <fields>
        <fullName>Actual_Results__c</fullName>
        <label>Actual Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>It&apos;s for difine that test case is for internal or external testing.  Unit Test is internal test. SIT depends on project resource loading. UAT is external test.</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Unit Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Count_Failed_Step__c</fullName>
        <label>*Count Failed Step</label>
        <summaryFilterItems>
            <field>Test_Step__c.Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Step__c.Test_Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Passed__c</fullName>
        <label>*Count Passed Step</label>
        <summaryFilterItems>
            <field>Test_Step__c.Status__c</field>
            <operation>equals</operation>
            <value>Passed</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Step__c.Test_Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Steps__c</fullName>
        <label>*Count Steps</label>
        <summaryForeignKey>Test_Step__c.Test_Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Develop_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Develop Task</label>
        <referenceTo>Develop_Task__c</referenceTo>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <label>Expected Result</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Iteration_Id__c</fullName>
        <formula>Requirement__r.Iteration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Iteration Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Condition__c</fullName>
        <defaultValue>&quot;N / A&quot;</defaultValue>
        <label>Pre-Condition</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <formula>RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requirement</label>
        <referenceTo>Requirement_UserStory__c</referenceTo>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scenarios__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenarios</label>
        <referenceTo>Scenarios__c</referenceTo>
        <relationshipName>Test_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Screenshot__c</fullName>
        <label>Screenshot</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>WIP means work in process.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>WIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Result__c</fullName>
        <label>Test Result</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Steps__c</fullName>
        <label>Test Steps</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Test Case2</label>
    <nameField>
        <label>Test Case</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <recordTypes>
        <fullName>Requirement</fullName>
        <active>true</active>
        <label>Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>UAT</fullName>
        <active>true</active>
        <label>UAT</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>